# GEOSHeightCorrection

./: .dockerignore  .gitignore  .zenodo.json  CMakeLists.txt  Dockerfile  LICENSE  MathMatrix.h  MathVector.h  README.md  correction.cpp  correction.h  correction_utils.h  geodetic_utils.h  georeference_utils.h  main.cpp  perform_geos_height_correction.sh  program_options_ext.h  tableGenerator.cpp
.docs/: README.src.md  bibliography.bib  generate_readme.sh
data/: ctt_201507251300.tif  h_201507251300.tif
tests/: CMakeLists.txt  cloud_simulation.cpp  cloud_simulation.h  correction_tests.cpp  fixtures.cpp  fixtures.h  main_test.cpp  pixel_correction_tests.cpp  test_utils.h
